--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -1,7 +1,6 @@
 #chat-box {
-    width: 450px;
+    width: 100%;
     height: 100%;
-    max-height: 328px;
     background: #fff;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -9,14 +8,14 @@
     overflow: hidden;
     display: flex;
     flex-direction: column;
-    margin: 20px auto;
 }
 
 #messages {
     flex-grow: 1;
+    flex-basis: 0;
     padding: 10px;
     border-bottom: 1px solid #ccc;
-    overflow-y: auto;
+    overflow-y: scroll;
     display: flex;
     flex-direction: column-reverse;
 }
@@ -25,7 +24,6 @@
     word-wrap: break-word;
     white-space: pre-wrap;
     align-self: flex-start;
-    /* Align messages to the start */
 }
 
 .message {
@@ -62,4 +60,23 @@
 
 #send-button:hover {
     background: #45a049;
+    transform: scale(1.1);
+    transition: transform 0.2s ease-in-out;
+}
+
+.statusContainer {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    flex-grow: 1;
+}
+
+.historyContainer {
+    /* border: solid; */
+}
+
+.paper {
+    border: solid;
+    height: 100%;
+    overflow-y: scroll;
+
 }
