--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -21,8 +21,7 @@
 }
 
 #messages>div {
-    word-wrap: break-word;
-    white-space: pre-wrap;
+    word-break: break-word;
     align-self: flex-start;
 }
 
@@ -68,15 +67,25 @@
     display: grid;
     grid-template-rows: 1fr 1fr;
     flex-grow: 1;
+    flex-direction: column;
 }
 
-.historyContainer {
-    /* border: solid; */
+#historyContainer {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .paper {
-    border: solid;
-    height: 100%;
+    flex-grow: 1;
+    flex-basis: 0;
+    padding: 10px;
     overflow-y: scroll;
-
+    display: flex;
+    flex-direction: column;
 }
